# smart-email-assistant-newel

./: .dockerignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: orchestrator.py  streamlit_ui.py  utils.py
app/agents/: crewai_response_agent.py  email_classifier.py  escalation_agent.py  response_generator.py  response_generator_ollama.py
assets/eval/: dt_classification_report.txt  lr_classification_report.txt  rf_classification_report.txt  xgb_classification_report.txt
data/: emails.csv
logs/: history.csv
models/: label_encoder.pkl  model.pkl  vectorizer.pkl
notebooks/: data_cleaning.ipynb
